--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,172 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.circles::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #FEE715;
+    clip-path: circle(75% at 0% -50%);
+}
+
+.circles::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #101820;
+    clip-path: circle(25% at 100% 100%);
+}
+
+.images {
+    border-radius: 100%;
+}
+
+.shadow-custom {
+    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.3),
+                inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+                5px 5px 15px rgba(0, 0, 0, 0.3),
+                -5px -5px 15px rgba(255, 255, 255, 0.1);
+}
+
+.shadow-custom-2 {
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5)
+}
+
+.shadow-custom-2:hover {
+    box-shadow: 0 40px 70px rgba(0, 0, 0, 0.5)
+}
+
+.shadow-custom-2:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.05);
+    pointer-events: none;
+}
+.mySwiper {
+    width: 100%;
+    height: 600px;
+}
+
+.swiper .swiper-slide {
+    filter: blur(8px);
+    background: black;
+}
+
+.swiper .swiper-slide-active {
+    filter: blur(0px);
+}
+
+.layer {
+    position: absolute;
+    top: calc(100% - 2px);
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#FEE715, #101820);
+    z-index: 1;
+    transition: 1s;
+}
+
+.swiper-container .swiper-slide {
+    -webkit-box-reflect: below 4px -webkit-linear-gradient(transparent 90%, #0009);
+}
+
+.swiper-container .swiper-slide:hover .layer {
+    top: 0;
+}
+
+.label-acc:after {
+    content: '+';
+    position: absolute;
+    right: 20px;
+    top: 0;
+    font-size: 2em;
+    color: rgba(0, 0, 0, 0.1);
+    transition: transform 1s;
+}
+
+.tab-acc:hover .label-acc:after{
+    color: #333;
+}
+
+.tab-acc input:checked ~ .label-acc:after {
+    transform: rotate(135deg);
+}
+
+.content-acc {
+    transition: 1s;
+}
+
+.tab-acc input:checked ~ .content-acc {
+    max-height: 100vh;
+}
+.privacy h2 {
+    font-weight: 700;
+    margin: 10px 0;
+    font-size: 20px;
+}
+
+.privacy p {
+    margin: 15px 0;
+    font-weight: 400;
+}
+
+.category input[type="radio"] {
+    box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.1),
+                5px 5px 10px rgba(0, 0, 0, 1),
+                inset -2px -2px 5px rgba(255, 255, 255, 0.1),
+                inset 2px 2px 5px rgba(0, 0, 0, 1);
+    transition: 0.5s;
+}
+
+.category input[type="radio"]:checked {
+    background: #FEE715;
+}
+
+.category input[type="radio"]:checked ~ span {
+    color: #FEE715;
+}
+
+.category input[type="radio"]:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60%;
+    height: 100%;
+    background: #101820;
+    border-radius: 20px;
+    transform: scale(0.98, 0.96);
+}
+
+.category input[type="radio"]:checked::before {
+    left: 40%;
+}
+
+.category input[type="radio"]::after {
+    content: '';
+    position: absolute;
+    left: 20%;
+    top: calc(50% - 2px);
+    width: 3px;
+    height: 3px;
+    background: rgb(229 231 235);
+    border-radius: 50%;
+}
+
+.category input[type="radio"]:checked::after {
+    left: calc(60% + 20%);
+    background: #FEE715;
+}
