made the radio button colors important in CSS and created a radioButton livewire component

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -132,11 +132,11 @@
 }
 
 .category input[type="radio"]:checked {
-    background: #FEE715;
+    background: #FEE715 !important;
 }
 
 .category input[type="radio"]:checked ~ span {
-    color: #FEE715;
+    color: #FEE715 !important;
 }
 
 .category input[type="radio"]:before {
@@ -170,19 +170,7 @@
     left: calc(60% + 20%);
     background: #FEE715;
 }
-
+/* 
 input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
-}
-
-/* CHECKBOX TOGGLE SWITCH */
-    /* @apply rules for documentation, these do not work as inline style */
-    .toggle-checkbox:checked {
-        @apply: right-0 border-green-400;
-        right: 0;
-        border-color: #68D391;
-    }
-    .toggle-checkbox:checked + .toggle-label {
-        @apply: bg-green-500;
-        background-color: #68D391;
-    }
+} */
