--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+body {font-family: 'Ubuntu', sans-serif};
+
 @layer base {
     html {
         scroll-behavior: smooth;
@@ -125,7 +127,7 @@
 }
 
 .tab-acc input:checked ~ .content-acc {
-    max-height: 100vh;
+    max-height: 100vh !important;
 }
 .privacy h2 {
     font-weight: 700;
