--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {font-family: 'Ubuntu', sans-serif};
+body {font-family: 'Ubuntu', sans-serif}
 
 @layer base {
     html {
