worked on making each element have specific width and height

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {font-family: 'Ubuntu', sans-serif}
+body {
+    font-family: 'Ubuntu', sans-serif;
+    -webkit-overflow-scrolling: touch;
+}
 
 @layer base {
     html {
